force-app/main/default/objects/nFORCE__Audit_Log__c/nFORCE__Audit_Log__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store nCino audit logs</description>
    <label>Audit Log</label>
    <nameField>
        <label>Audit Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>