force-app/main/default/objects/nFORCE__Audit_Log__c/fields/nFORCE__Context__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context__c</fullName>
    <description>The system populates this field to store the audit log initiator.</description>
    <label>Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>