force-app/main/default/objects/nFORCE__Audit_Log__c/fields/nFORCE__Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Description__c</fullName>
    <description>The system populates this field to store additional log details.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>