force-app/main/default/objects/nFORCE__Audit_Log__c/fields/nFORCE__Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Type__c</fullName>
    <description>The system populates this field to store the audit log type.</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>