force-app/main/default/objects/nFORCE__Audit_Log__c/fields/nFORCE__User__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this field to map the audit log to the associated user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Log_User</relationshipName>
    <type>Lookup</type>
</CustomField>